Admin Projects/StationInfo/force-app/main/default/objects/Man_Power__c/Man_Power__c.object-meta.xml
<CustomObject>
    <label>Man Power</label>
    <nameField>
        <label>Man Power Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Man Power</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>