Admin Projects/StationInfo/force-app/main/default/objects/Man_Power__c/fields/Night_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Night_Approval_Status__c</fullName>
    <inlineHelpText>Your approver will update this field.</inlineHelpText>
    <label>Night Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>