Admin Projects/StationInfo/force-app/main/default/objects/Man_Power__c/fields/Percentage_utilization_of_manpower__c.field-meta.xml
<CustomField>
    <fullName>Percentage_utilization_of_manpower__c</fullName>
    <label>Percentage utilization of manpower</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>