Admin Projects/StationInfo/force-app/main/default/objects/Man_Power__c/fields/Shift__c.field-meta.xml
<CustomField>
    <fullName>Shift__c</fullName>
    <inlineHelpText>You need to submit for approval, if your department is Engineering and shift is Night Shift.</inlineHelpText>
    <label>Shift</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Early Morning</fullName>
            </value>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Afternoon</fullName>
            </value>
            <value>
                <fullName>Evening</fullName>
            </value>
            <value>
                <fullName>Night</fullName>
            </value>
            <value>
                <fullName>Midnight</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>