Admin Projects/StationInfo/force-app/main/default/objects/Man_Power__c/fields/Total_number_of_people_in_a_department__c.field-meta.xml
<CustomField>
    <fullName>Total_number_of_people_in_a_department__c</fullName>
    <label>Total number of people in a department</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>